feat: filtering Shells based on timestamp
